--- a/web/home/css/home.css
+++ b/web/home/css/home.css
@@ -49,11 +49,12 @@ li{
     float:left;
 }
 .head_center .head_nav ul li a{
+    margin-top: 10px;
     width:120px;
     height:65px;
     display:block;
     text-align:center;
-    font-size:16px;
+    font-size:20px;
     font-weight:bold;
     font-family:"Microsoft YaHei";
     color:#E8E8E8;
@@ -77,12 +78,13 @@ li{
     cursor:pointer;
 }
 .head_login li a{
+    margin-top: 10px;
     width:80px;
     height:65px;
     float:left;
     line-height:65px;
     text-align:center;
-    font-size:16px;
+    font-size:20px;
     font-weight:bold;
     font-family:"Microsoft YaHei";
     color:#E8E8E8;
